--- a/src/components/Services.scss
+++ b/src/components/Services.scss
@@ -10,14 +10,17 @@
 
         .text-container{
             width: 100%;
-            font-size: 0.5rem;
+            font-size: 0.8rem;
             display: flex;
             align-items: center;
             justify-content: center;
             .text-wrapper {
-                width: 50%;
-                text-align: left;
+                width: 90%;
+                text-align: center;
 
+                .services-text, p {
+                    text-align: left;
+                }
                 ul {
                     line-height: 1.5em;
                 }
@@ -33,7 +36,7 @@
         justify-content: space-between;
         align-items:center;
         width: 100%;
-        // padding-bottom: 2em;
+
         .text-container{
             width: 45%;
             font-size: 1.2rem;
